# Higgs_v3-TTS-ComfyUI

./: .gitignore  LICENSE  README.md  README_zh.md  __init__.py  install.py  loader.py  native.py  nodes.py  pyproject.toml  requirements.txt  whisper.py
assets/higgs-audio-v3-tts-4b/: LICENSE  README.md  config.json  model.safetensors.index.json  tokenizer.json  tokenizer_config.json
example_workflows/: higgs_audio_v3-tts_example_workflow.json
